atualizacao de design e conectividade

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Home</p>
             <p>Galerry</p>
             <p>Contact</p>
-            <button>Login</button>
+            <button onclick="imParaOutraPagina()">Login</button>
         </div>
     </div>
 
@@ -23,7 +23,10 @@
         <h1>WELCOME</h1>
         <h3>To Coffe Cups <br> Come One, Login Now!</h3>
 
-        <button>Login</button>
+        <button onclick="irParaOutraPagina()">Login</button>
     </div>
+
+
+    <script src="_js/script.js"></script>
 </body>
 </html>
